// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Modal Borrow Modal 1`] = `
<div
  className="sc-bBrHrO kfhXhC"
>
  <div
    className="o-center-layout sc-iqcoie sc-ivTmOn dSwmDQ frqDXP"
  >
    <button
      appearance="text"
      className="sc-dkzDqf sc-ftvSup dwqmAz gyjXwR sc-cxabCf kRshnx u-fit-content-width"
      data-element="button"
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-crXcEl gXvOqP"
      gap={5}
    >
      <div
        className="sc-crXcEl dZlCHs"
      >
        <div
          className="sc-gicCDI ccGYpH"
          data-element="tableWrapper"
        >
          <table
            className="sc-ezWOiH fmCaML"
            data-element="table"
          >
            <thead
              className="sc-cCsOjp ffUHXz"
            >
              <tr>
                <td
                  className="sc-jdAMXn cgapwY"
                  colSpan={2}
                >
                  <h2
                    className="sc-fnykZs cLtCZi c-text--heading-2 c-text--color-oxfordBlue"
                  >
                    Borrow asset
                  </h2>
                </td>
              </tr>
              <tr>
                <td
                  className="sc-ikZpkk sc-jIZahH jiHEqn iVsiNu"
                  width="50%"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    Amount
                  </div>
                </td>
                <td
                  className="sc-ikZpkk sc-jIZahH jorjXY iVsiNu"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    
                  </div>
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="sc-ikZpkk kEHywv"
                >
                  <div
                    className="sc-evZas qzYJH"
                  >
                    <div
                      className="sc-bczRLJ bIAKfX"
                    >
                      <input
                        disabled={false}
                        type="text"
                      />
                    </div>
                    
                    <button
                      appearance="secondary"
                      className="sc-dkzDqf sc-eCYdqJ gMEeex hSTXnF u-fit-content-width"
                      data-element="button"
                      size="small"
                      variant="thin"
                    >
                      MAX
                    </button>
                  </div>
                </td>
                <td
                  className="sc-ikZpkk jorjXY"
                >
                  <span>
                    ETH
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="sc-gicCDI ccGYpH"
          data-element="tableWrapper"
        >
          <table
            className="sc-ezWOiH fmCaML"
            data-element="table"
          >
            <thead
              className="sc-cCsOjp ffUHXz"
            >
              
              
              <tr>
                <td
                  className="sc-ikZpkk sc-jIZahH kEHywv hohZkz"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    Transaction overview
                  </div>
                </td>
                <td
                  className="sc-ikZpkk sc-jIZahH jorjXY hohZkz"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    
                  </div>
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="sc-ikZpkk kEHywv"
                >
                  <p
                    className="sc-fnykZs jgfqoh c-text--body-3 c-text--color-oxfordBlue"
                  >
                    Health factor
                  </p>
                </td>
                <td
                  className="sc-ikZpkk jorjXY"
                >
                  <div
                    className="sc-crXcEl dZlCHs"
                  >
                    <div
                      className="sc-evZas qzYJH sc-cTQhss gkRfOD"
                    >
                      <span
                        className="sc-fnykZs gXNkYI"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        1,00
                      </span>
                    </div>
                    <span
                      className="sc-fnykZs gXNkYI"
                      color="oxfordBlue"
                      type="body 1"
                    >
                      Liquidation at &lt; 1.00
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        className="sc-jqUVSM PwVrf"
        gap={1.875}
      >
        <div
          className="sc-crXcEl dvcSNb"
          gap={1}
        >
          <button
            appearance="dark"
            className="sc-dkzDqf sc-jSMfEi eqULik kcPxMO u-full-width"
            data-element="button"
            size="large"
            variant="large"
          >
            Borrow asset
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Deposit Modal 1`] = `
<div
  className="sc-bBrHrO kfhXhC"
>
  <div
    className="o-center-layout sc-iqcoie sc-ivTmOn dSwmDQ frqDXP"
  >
    <button
      appearance="text"
      className="sc-dkzDqf sc-ftvSup dwqmAz gyjXwR sc-cxabCf kRshnx u-fit-content-width"
      data-element="button"
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-crXcEl gXvOqP"
      gap={5}
    >
      <div
        className="sc-crXcEl dZlCHs"
      >
        <div
          className="sc-gicCDI ccGYpH"
          data-element="tableWrapper"
        >
          <table
            className="sc-ezWOiH fmCaML"
            data-element="table"
          >
            <thead
              className="sc-cCsOjp ffUHXz"
            >
              <tr>
                <td
                  className="sc-jdAMXn cgapwY"
                  colSpan={2}
                >
                  <h2
                    className="sc-fnykZs cLtCZi c-text--heading-2 c-text--color-oxfordBlue"
                  >
                    Deposit asset
                  </h2>
                </td>
              </tr>
              <tr>
                <td
                  className="sc-ikZpkk sc-jIZahH jiHEqn iVsiNu"
                  width="50%"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    Amount
                  </div>
                </td>
                <td
                  className="sc-ikZpkk sc-jIZahH jorjXY iVsiNu"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    
                  </div>
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="sc-ikZpkk kEHywv"
                >
                  <div
                    className="sc-evZas qzYJH"
                  >
                    <div
                      className="sc-bczRLJ bIAKfX"
                    >
                      <input
                        disabled={false}
                        type="text"
                      />
                    </div>
                    
                    <button
                      appearance="secondary"
                      className="sc-dkzDqf sc-eCYdqJ gMEeex hSTXnF u-fit-content-width"
                      data-element="button"
                      size="small"
                      variant="thin"
                    >
                      MAX
                    </button>
                  </div>
                </td>
                <td
                  className="sc-ikZpkk jorjXY"
                >
                  <span>
                    ETH
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="sc-jqUVSM PwVrf"
          gap={1.875}
        >
          <div
            className="sc-evZas ixtDFr"
          >
            <p
              className="sc-fnykZs gMVeoD c-text--body-2"
            >
              Collaterization
            </p>
            <div
              className="sc-iTONeN fVhXQT rts-toggle__container undefined"
              data-element="toggle"
              height={25}
              width={50}
            >
              <input
                className="sc-efBctP iJKBRO rts-toggle__toggle"
                data-element="toggle-input"
                type="checkbox"
              />
              <span
                className="sc-iAvgwm ZhnSP rts-toggle__background"
                data-element="toggle-background"
                height={25}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-jqUVSM PwVrf"
        gap={1.875}
      >
        <div
          className="sc-crXcEl dvcSNb"
          gap={1}
        >
          <button
            appearance="dark"
            className="sc-dkzDqf sc-jSMfEi eqULik kcPxMO u-full-width"
            data-element="button"
            size="large"
            variant="large"
          >
            Approve to conitinue
          </button>
          <button
            appearance="secondary"
            className="sc-dkzDqf sc-eCYdqJ dZVtol hSTXnF u-full-width"
            data-element="button"
            disabled={true}
            size="large"
            variant="large"
          >
            Deposit ETH
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Modal Example 1`] = `
<button
  appearance="primary"
  className="sc-dkzDqf sc-hKMtZM eOixSn jyzXNF"
  data-element="button"
  onClick={[Function]}
  size="medium"
  variant="medium"
>
  Open Modal
</button>
`;

exports[`Storyshots Components/Modal Repay Modal 1`] = `
<div
  className="sc-bBrHrO kfhXhC"
>
  <div
    className="o-center-layout sc-iqcoie sc-ivTmOn dSwmDQ frqDXP"
  >
    <button
      appearance="text"
      className="sc-dkzDqf sc-ftvSup dwqmAz gyjXwR sc-cxabCf kRshnx u-fit-content-width"
      data-element="button"
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-crXcEl gXvOqP"
      gap={5}
    >
      <div
        className="sc-crXcEl dZlCHs"
      >
        <div
          className="sc-gicCDI ccGYpH"
          data-element="tableWrapper"
        >
          <table
            className="sc-ezWOiH fmCaML"
            data-element="table"
          >
            <thead
              className="sc-cCsOjp ffUHXz"
            >
              <tr>
                <td
                  className="sc-jdAMXn cgapwY"
                  colSpan={2}
                >
                  <h2
                    className="sc-fnykZs cLtCZi c-text--heading-2 c-text--color-oxfordBlue"
                  >
                    Repay asset
                  </h2>
                </td>
              </tr>
              <tr>
                <td
                  className="sc-ikZpkk sc-jIZahH jiHEqn iVsiNu"
                  width="50%"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    Amount
                  </div>
                </td>
                <td
                  className="sc-ikZpkk sc-jIZahH jorjXY iVsiNu"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    
                  </div>
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="sc-ikZpkk kEHywv"
                >
                  <div
                    className="sc-evZas qzYJH"
                  >
                    <div
                      className="sc-bczRLJ bIAKfX"
                    >
                      <input
                        disabled={false}
                        type="text"
                      />
                    </div>
                    
                    <button
                      appearance="secondary"
                      className="sc-dkzDqf sc-eCYdqJ gMEeex hSTXnF u-fit-content-width"
                      data-element="button"
                      size="small"
                      variant="thin"
                    >
                      MAX
                    </button>
                  </div>
                </td>
                <td
                  className="sc-ikZpkk jorjXY"
                >
                  <span>
                    ETH
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="sc-gicCDI ccGYpH"
          data-element="tableWrapper"
        >
          <table
            className="sc-ezWOiH fmCaML"
            data-element="table"
          >
            <thead
              className="sc-cCsOjp ffUHXz"
            >
              
              
              <tr>
                <td
                  className="sc-ikZpkk sc-jIZahH kEHywv hohZkz"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    Transaction overview
                  </div>
                </td>
                <td
                  className="sc-ikZpkk sc-jIZahH jorjXY hohZkz"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    
                  </div>
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="sc-ikZpkk kEHywv"
                >
                  <span
                    className="sc-fnykZs jgfqoh"
                    color="oxfordBlue"
                    type="body 3"
                  >
                    Remaining debt
                  </span>
                </td>
                <td
                  className="sc-ikZpkk jorjXY"
                >
                  <div
                    className="sc-crXcEl dZlCHs"
                  >
                    <div
                      className="sc-evZas qzYJH sc-cTQhss gkRfOD"
                    >
                      <span
                        className="sc-fnykZs gXNkYI"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        1.00 Asset
                      </span>
                      <span
                        className="sc-fnykZs gXNkYI"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        0.000001 Asset
                      </span>
                    </div>
                    <span
                      className="sc-fnykZs gXNkYI"
                      color="oxfordBlue"
                      type="body 1"
                    >
                      Liquidation at &lt; 1.00
                    </span>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  className="sc-ikZpkk kEHywv"
                >
                  <span
                    className="sc-fnykZs jgfqoh"
                    color="oxfordBlue"
                    type="body 3"
                  >
                    Health factor
                  </span>
                </td>
                <td
                  className="sc-ikZpkk jorjXY"
                >
                  <div
                    className="sc-crXcEl dZlCHs"
                  >
                    <div
                      className="sc-evZas qzYJH sc-cTQhss gkRfOD"
                    >
                      <span
                        className="sc-fnykZs gXNkYI"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        1.00
                      </span>
                    </div>
                    <span
                      className="sc-fnykZs gXNkYI"
                      color="oxfordBlue"
                      type="body 1"
                    >
                      Liquidation at &lt; 1.00
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        className="sc-jqUVSM PwVrf"
        gap={1.875}
      >
        <div
          className="sc-crXcEl dvcSNb"
          gap={1}
        >
          <button
            appearance="dark"
            className="sc-dkzDqf sc-jSMfEi eqULik kcPxMO u-full-width"
            data-element="button"
            size="large"
            variant="large"
          >
            Repay asset
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Withdraw Modal 1`] = `
<div
  className="sc-bBrHrO kfhXhC"
>
  <div
    className="o-center-layout sc-iqcoie sc-ivTmOn dSwmDQ frqDXP"
  >
    <button
      appearance="text"
      className="sc-dkzDqf sc-ftvSup dwqmAz gyjXwR sc-cxabCf kRshnx u-fit-content-width"
      data-element="button"
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-crXcEl gXvOqP"
      gap={5}
    >
      <div
        className="sc-crXcEl dZlCHs"
      >
        <div
          className="sc-gicCDI ccGYpH"
          data-element="tableWrapper"
        >
          <table
            className="sc-ezWOiH fmCaML"
            data-element="table"
          >
            <thead
              className="sc-cCsOjp ffUHXz"
            >
              <tr>
                <td
                  className="sc-jdAMXn cgapwY"
                  colSpan={2}
                >
                  <h2
                    className="sc-fnykZs cLtCZi c-text--heading-2 c-text--color-oxfordBlue"
                  >
                    Withdraw asset
                  </h2>
                </td>
              </tr>
              <tr>
                <td
                  className="sc-ikZpkk sc-jIZahH jiHEqn iVsiNu"
                  width="50%"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    Amount
                  </div>
                </td>
                <td
                  className="sc-ikZpkk sc-jIZahH jorjXY iVsiNu"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    
                  </div>
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="sc-ikZpkk kEHywv"
                >
                  <div
                    className="sc-evZas qzYJH"
                  >
                    <div
                      className="sc-bczRLJ bIAKfX"
                    >
                      <input
                        disabled={false}
                        type="text"
                      />
                    </div>
                    
                    <button
                      appearance="secondary"
                      className="sc-dkzDqf sc-eCYdqJ gMEeex hSTXnF u-fit-content-width"
                      data-element="button"
                      size="small"
                      variant="thin"
                    >
                      MAX
                    </button>
                  </div>
                </td>
                <td
                  className="sc-ikZpkk jorjXY"
                >
                  <span>
                    ETH
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="sc-gicCDI ccGYpH"
          data-element="tableWrapper"
        >
          <table
            className="sc-ezWOiH fmCaML"
            data-element="table"
          >
            <thead
              className="sc-cCsOjp ffUHXz"
            >
              
              
              <tr>
                <td
                  className="sc-ikZpkk sc-jIZahH kEHywv hohZkz"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    Transaction overview
                  </div>
                </td>
                <td
                  className="sc-ikZpkk sc-jIZahH jorjXY hohZkz"
                >
                  <div
                    className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                  >
                    
                  </div>
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="sc-ikZpkk kEHywv"
                >
                  <span
                    className="sc-fnykZs jgfqoh"
                    color="oxfordBlue"
                    type="body 3"
                  >
                    Remaining supply
                  </span>
                </td>
                <td
                  className="sc-ikZpkk jorjXY"
                >
                  <div
                    className="sc-crXcEl dZlCHs"
                  >
                    <div
                      className="sc-evZas qzYJH sc-cTQhss gkRfOD"
                    >
                      <span
                        className="sc-fnykZs gXNkYI"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        0.000001 Asset
                      </span>
                    </div>
                    <span
                      className="sc-fnykZs gXNkYI"
                      color="oxfordBlue"
                      type="body 1"
                    >
                      Liquidation at &lt; 1.00
                    </span>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  className="sc-ikZpkk kEHywv"
                >
                  <span
                    className="sc-fnykZs jgfqoh"
                    color="oxfordBlue"
                    type="body 3"
                  >
                    Health factor
                  </span>
                </td>
                <td
                  className="sc-ikZpkk jorjXY"
                >
                  <div
                    className="sc-crXcEl dZlCHs"
                  >
                    <div
                      className="sc-evZas qzYJH sc-cTQhss gkRfOD"
                    >
                      <span
                        className="sc-fnykZs gXNkYI"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        1.00
                      </span>
                    </div>
                    <span
                      className="sc-fnykZs gXNkYI"
                      color="oxfordBlue"
                      type="body 1"
                    >
                      Liquidation at &lt; 1.00
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        className="sc-jqUVSM PwVrf"
        gap={1.875}
      >
        <div
          className="sc-crXcEl dvcSNb"
          gap={1}
        >
          <button
            appearance="dark"
            className="sc-dkzDqf sc-jSMfEi eqULik kcPxMO u-full-width"
            data-element="button"
            size="large"
            variant="large"
          >
            Repay asset
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
